force-app/main/default/objects/ADM_Release_Freeze_Status__c/ADM_Release_Freeze_Status__c.object-meta.xml
<CustomObject>
    <label>Release Freeze Team Status</label>
    <nameField>
        <displayFormat>RFS-{0000000}</displayFormat>
        <label>Release Freeze Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Freeze Team Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>