force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Blocking_or_P0_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Blocking_or_P0_Bugs__c</fullName>
    <description>Number of P0/P1/Blocking Bugs</description>
    <label>Number of P0/P1/Blocking Bugs (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>