force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Bugs_Fixed_Week_of_RF__c.field-meta.xml
<CustomField>
    <fullName>Bugs_Fixed_Week_of_RF__c</fullName>
    <label># Bugs Fixed Week of RF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>