force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Bugs_Test_Failures_Fixed_Week_of_RF__c.field-meta.xml
<CustomField>
    <fullName>Bugs_Test_Failures_Fixed_Week_of_RF__c</fullName>
    <description>Bugs/TF Fixed the Week of Release Freeze (explain if count is high relative to previous 2-3 weeks)</description>
    <label>Bugs/TF Fixed Week of RF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>