force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <formula>Team_Release__r.Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build</label>
    <type>Text</type>
</CustomField>