force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Changes_to_Hub_Agent__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Hub_Agent__c</fullName>
    <description>Any changes to the Hub &amp; Agent?</description>
    <inlineHelpText>Any changes to the Hub &amp; Agent?</inlineHelpText>
    <label>Changes to Hub &amp; Agent</label>
    <type>TextArea</type>
</CustomField>