force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Changes_to_ping_jsp__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_ping_jsp__c</fullName>
    <description>Any changes to ping.jsp?</description>
    <inlineHelpText>Any changes to ping.jsp?</inlineHelpText>
    <label>Changes to ping.jsp</label>
    <type>TextArea</type>
</CustomField>