force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Code_Coverage_Goals_Met__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage_Goals_Met__c</fullName>
    <description>Code coverage goals met.</description>
    <inlineHelpText>Code coverage goals met.</inlineHelpText>
    <label>Code Coverage Goals Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>