force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation of the Release Freeze Signoff</description>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>