force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/DB_Upgrade_Scripts_Complete_and_Verified__c.field-meta.xml
<CustomField>
    <fullName>DB_Upgrade_Scripts_Complete_and_Verified__c</fullName>
    <description>DB Upgrade Scripts Complete and Verified (Yes/No/Not Applicable)</description>
    <inlineHelpText>DB Upgrade Scripts Complete and Verified (Yes/No/Not Applicable)</inlineHelpText>
    <label>DB Upgrade Scripts Complete and Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>