force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Auto_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Explain_Auto_Integrations__c</fullName>
    <label>Explain Auto Integrations</label>
    <type>TextArea</type>
</CustomField>