force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Blocking_P0_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Blocking_P0_Bugs__c</fullName>
    <label>Explain P0/P1/Blocking Bugs</label>
    <type>TextArea</type>
</CustomField>