force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Bugs_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>Explain_Bugs_to_Fix__c</fullName>
    <label>Explain Bugs to Fix</label>
    <type>TextArea</type>
</CustomField>