force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Code_Coverage_goals_not_met__c.field-meta.xml
<CustomField>
    <fullName>Explain_Code_Coverage_goals_not_met__c</fullName>
    <label>Explain Code Coverage Goals Not Met</label>
    <type>TextArea</type>
</CustomField>