force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_doc_incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_doc_incomplete__c</fullName>
    <label>Explain Doc Incomplete</label>
    <type>TextArea</type>
</CustomField>