force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_failure_to_pass_systes__c.field-meta.xml
<CustomField>
    <fullName>Explain_failure_to_pass_systes__c</fullName>
    <label>Explain Failure to Pass Performance</label>
    <type>TextArea</type>
</CustomField>