force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_find_rate_if_high__c.field-meta.xml
<CustomField>
    <fullName>Explain_find_rate_if_high__c</fullName>
    <label>Explain High Bug Find Rate</label>
    <type>TextArea</type>
</CustomField>