force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_fix_rate_if_high__c.field-meta.xml
<CustomField>
    <fullName>Explain_fix_rate_if_high__c</fullName>
    <label>Explain High Fix Rate</label>
    <type>TextArea</type>
</CustomField>