force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_High_Number_of_bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_High_Number_of_bugs__c</fullName>
    <label>Explain High Bug Count</label>
    <type>TextArea</type>
</CustomField>