force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_High_Number_of_Bugs_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>Explain_High_Number_of_Bugs_to_Verify__c</fullName>
    <label>Explain Bugs to Verify</label>
    <type>TextArea</type>
</CustomField>