force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_High_TF_Count__c.field-meta.xml
<CustomField>
    <fullName>Explain_High_TF_Count__c</fullName>
    <label>Explain High TF Count</label>
    <type>TextArea</type>
</CustomField>