force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Open_P1_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_P1_Bugs__c</fullName>
    <label>Explain Open P1 Bugs</label>
    <type>TextArea</type>
</CustomField>