force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Open_Regressions__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Regressions__c</fullName>
    <label>Explain Open Regressions</label>
    <type>TextArea</type>
</CustomField>