force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_Open_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_User_Stories__c</fullName>
    <description>Explain any Open User Stories</description>
    <inlineHelpText>Explain any Open User Stories</inlineHelpText>
    <label>Explain Open User Stories</label>
    <type>TextArea</type>
</CustomField>