force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_pre_scripts_testing_not_complete__c.field-meta.xml
<CustomField>
    <fullName>Explain_pre_scripts_testing_not_complete__c</fullName>
    <label>Explain Pre-Scripts Testing Incomplete</label>
    <type>TextArea</type>
</CustomField>