force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Explain_release_sprint_goals_incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_release_sprint_goals_incomplete__c</fullName>
    <label>Explain Release Sprint Goals Incomplete</label>
    <type>TextArea</type>
</CustomField>