force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Number_of_Bugs_missing_Automation_0__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bugs_missing_Automation_0__c</fullName>
    <description>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</description>
    <inlineHelpText>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</inlineHelpText>
    <label>Number of Bugs missing Automation (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>