force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Number_of_P1_P2_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_P1_P2_Bugs__c</fullName>
    <description>Number of P1 &amp; P2 bugs/Test Failures that are not Verified and Closed.</description>
    <inlineHelpText>Number of P1 &amp; P2 bugs/Test Failures that are not Verified and Closed.</inlineHelpText>
    <label>Number of P1/P2 Bugs/Test Failures (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>