force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Open_Regressions__c.field-meta.xml
<CustomField>
    <fullName>Open_Regressions__c</fullName>
    <inlineHelpText>Number of open regressions.  Should be 0 at Release Freeze.</inlineHelpText>
    <label>Number Open Regressions (0)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>