force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/P1_Bugs__c.field-meta.xml
<CustomField>
    <fullName>P1_Bugs__c</fullName>
    <label>P1 Bugs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>