force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Post_Release_Freeze_Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>Post_Release_Freeze_Status_Updates__c</fullName>
    <label>Post Release Freeze Status Updates</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>