force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Pre_Scripts__c.field-meta.xml
<CustomField>
    <fullName>Pre_Scripts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Scripts Testing Complete?</label>
    <type>Checkbox</type>
</CustomField>