force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <formula>CASE(Team_Release__r.Scrum_Team__r.Division__c, &quot;Applications&quot;, &quot;Applications&quot;, &quot;Core&quot;, &quot;Core&quot;, &quot;Platform&quot;, &quot;Platform&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Division</label>
    <type>Text</type>
</CustomField>