force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Release_Sprint_Goals_Complete__c.field-meta.xml
<CustomField>
    <fullName>Release_Sprint_Goals_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Release Sprint Goals Met/Complete.</description>
    <inlineHelpText>Release Sprint Goals Met/Complete.</inlineHelpText>
    <label>Release Sprint Goals Complete</label>
    <type>Checkbox</type>
</CustomField>