force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <formula>Team_Release__r.Scrum_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scrum Team</label>
    <type>Text</type>
</CustomField>