force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Signoff_Date__c</fullName>
    <formula>IF( Team_Signs_Off__c = true,   LastModifiedDate , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signoff Date</label>
    <type>Date</type>
</CustomField>