force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Team_Release__c.field-meta.xml
<CustomField>
    <fullName>Team_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Release</label>
    <referenceTo>ADM_Team_Release__c</referenceTo>
    <relationshipName>R00NT0000000txqIMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>