force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Team_Signs_Off__c.field-meta.xml
<CustomField>
    <fullName>Team_Signs_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Team signs off by checking the box.</description>
    <inlineHelpText>Team signs off by checking the box.</inlineHelpText>
    <label>Team Signoff</label>
    <type>Checkbox</type>
</CustomField>