force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Test_Failures_older_than_1_day__c.field-meta.xml
<CustomField>
    <fullName>Test_Failures_older_than_1_day__c</fullName>
    <label>Test Failures Older Than 1 Day (0)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>