force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Test_Failures_older_than_allowable__c.field-meta.xml
<CustomField>
    <fullName>Test_Failures_older_than_allowable__c</fullName>
    <inlineHelpText>Total Number of Extended TF to Fix &gt;3 days old and Other TF to Fix &gt;1 day old (0)</inlineHelpText>
    <label>Test Failures Older Than Allowable Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>