force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/TF_Found_Week_of_RF__c.field-meta.xml
<CustomField>
    <fullName>TF_Found_Week_of_RF__c</fullName>
    <label>TF Found Week of RF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>