force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Total_number_of_bugs_TF_to_fix__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_bugs_TF_to_fix__c</fullName>
    <description>Total Number of Bugs/TF to Fix</description>
    <label>Total Number of Bugs/TF to Fix</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>