force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Total_Number_of_TF_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_TF_to_Fix__c</fullName>
    <label>Number of TF to Fix (max 1/Dev)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>