force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/X100_of_Test_Cases_Passing__c.field-meta.xml
<CustomField>
    <fullName>X100_of_Test_Cases_Passing__c</fullName>
    <description>100% of manual and automated test cases passing.</description>
    <inlineHelpText>100% of manual and automated test cases passing.</inlineHelpText>
    <label>100% of Test Cases Passing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>