force-app/main/default/objects/ADM_Release_Freeze_Status__c/fields/Zero_TF_basicftest_basicselenium_utest__c.field-meta.xml
<CustomField>
    <fullName>Zero_TF_basicftest_basicselenium_utest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zero TF on the basicftest, basicselenium and utest at time of RF</description>
    <inlineHelpText>New Criteria for 172: 
Zero TF on these test suites at time of RF.</inlineHelpText>
    <label>Zero TF:basicftest, basicselenium, utest</label>
    <type>Checkbox</type>
</CustomField>